objects/Lead_Convertion_Field_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>AccountFieldAPIName__c</fullName>
        <label>AccountFieldAPIName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseFieldAPIName__c</fullName>
        <label>CaseFieldAPIName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactFieldAPIName__c</fullName>
        <label>ContactFieldAPIName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadFieldAPIName__c</fullName>
        <label>LeadFieldAPIName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotUpdateExisting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not updated for leads converted to existing contacts.</description>
        <label>NotUpdateExisting</label>
        <type>Checkbox</type>
    </fields>
    <label>Lead Convertion Field Mapping</label>
</CustomObject>